Implementando autenticação com oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.freemarker.suffix=.ftl
 
 spring.jpa.defer-datasource-initialization=true
+
+spring.security.oauth2.client.registration.google.client-id=368698491394-f9rpqihj3evq0ec92ater1l3ulru6ike.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
